--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
       "src": "/(.*)",
@@ -14,6 +8,7 @@
   ],
   "functions": {
     "server.js": {
+      "runtime": "nodejs22.x",
       "maxDuration": 100
     }
   }
