--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "app.js"
     }
-  ],
-  "functions": {
-    "server.js": {
-      "runtime": "nodejs22.x",
-      "maxDuration": 100
-    }
-  }
+  ]
 }
